# tldr-sk

./: README.md  pyproject.toml
tldr/: main.py
tldr/articles/: article.txt  article2.txt  article3.txt  article4.txt  article5.txt
